glFusion ChangeLog

v1.1.2
------
- Updated version numbers (Mark)
        private/system/sql/mysql_tableanddata.php

- Links: validate the link is of valid structure prior to saving (Mark)
        private/plugins/links/functions.inc

- Resolved a search issue if query was empty but topic was not (mark)
        private/system/classes/search.class.php

- Implemented a 'clone story' feature (Mark)
        public_html/admin/story.php
        private/system/lib-admin.php
        private/system/classes/story.class.php

- Forum - Fixed a security vulnerability in the popular topic listing. The
  list did not properly filter posts by permission allowing posts that a user
  did not have read access to be listed. Reported by Eric Kingsley (Mark)
        public_html/forum/index.php

- Enhanced system maintenance option handling. No longer use $_CONF vars which
  could cause issues with caching of the configuration settings. (Mark)
    - rootdebug
    - site_enabled
    - no_fail_sql
    - no_config_cache (new)
    - maintenance_mode (new)
        public_html/siteconfig.php.dist
        public_html/lib-common.php
        private/system/classes/config.class.php
        private/system/lib-glfusion.php
        private/language/english.php
        private/language/english_utf-8.php

- Comments always show username, regarless of show_fullname configuration
  setting - Port from Geeklog (Mark)
        private/system/lib-comment.php

- Do not filter non-HTML email messages (Mark)
        public_html/lib-common.php

- Fixed bug where [imageX] did not allow more than 1 image per story (Mark)
        private/system/lib-story.php

- Updated MG import for stories to use new story class (Mark)
        private/plugins/mediagallery/include/lib-batch.php
        private/plugins/mediagallery/templates/gl_story_import.thtml
        public_html/admin/plugins/mediagallery/importers/gl_story/index.php

- New option to email user when admin creates account (Mark)