@@ -799,7 +799,7 @@ $LANG24 = array(
     63 => 'Auto Close Comments',
     64 => '',
     65 => '',
-    66 => '',
+    66 => 'There are no topics available for you to submit your story.',
     67 => 'Expand the Content Edit Area size',
     68 => 'Reduce the Content Edit Area size',
     69 => 'Publish Story Date',
